feat(publisall): Added publish all playlists functionality
